AI-Model/ai-model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-model # Replace with your own name
  labels:
    app: ai-model # Replace with your own name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-model # Replace with your own name
  template:
    metadata:
      labels:
        app: ai-model # Replace with your own name
    spec:
      containers:
      - name: ai-model # Replace with your own name
        image: mingklai5/ai-model # Replace with your own image
        imagePullPolicy: Always
        ports:
        - containerPort: 5050 # Replace to your port
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ai-model # Replace with your own name
spec:
  selector:
    app: ai-model # Replace with your own name
  ports:
  - name: ai-model # Replace with your own name
    port: 5050 # Replace to your port
    targetPort: 5050 # Replace to your port
  type: ClusterIP
